--- a/src/IoCComponentBurden/IoCComponentBurden.csproj
+++ b/src/IoCComponentBurden/IoCComponentBurden.csproj
@@ -97,13 +97,17 @@
     <Compile Include="Containers\CastleWindsorContainerWrapper.cs" />
     <Compile Include="Containers\FunqContainerWrapper.cs" />
     <Compile Include="Containers\LinFuContainerWrapper.cs" />
+    <Compile Include="DisposableComponentWithDependenciesTestCase.cs" />
     <Compile Include="IoCTestCase.cs" />
     <Compile Include="Model\DataStore.cs" />
+    <Compile Include="Model\DisposableService.cs" />
     <Compile Include="Model\IDataStore.cs" />
+    <Compile Include="Model\IDisposableService.cs" />
     <Compile Include="Model\IRepository.cs" />
     <Compile Include="Model\IService.cs" />
     <Compile Include="Model\ISession.cs" />
     <Compile Include="Containers\NInjectContainerWrapper.cs" />
+    <Compile Include="Model\NonDisposableRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Repository.cs" />
     <Compile Include="Model\Service.cs" />
